# app/swagger/give-recommendation.yml
@@ -1,45 +1,40 @@
 tags:
-- Carbon Footprint Management
+  - Carbon Footprint Management
 summary: Provide recommendations based on the highest carbon footprint sectors
-description: >
-        This function is invoked through a POST request to analyze a user's carbon 
-  footprint across different sectors, including business travel, energy usage, 
-  and waste management. By comparing the carbon footprints from these sectors, the function 
-  identifies the sector(s) with the highest carbon footprint for the specified *** company_name ***. It then provides tailored 
-  recommendations to help the user reduce their carbon footprint in those areas. The recommendations are
-  fetched from predefined text files associated with each sector. *** You can see results even one sector of the company was filled ***
+description: > 
+  This function is invoked through a POST request to analyze a user's carbon footprint across different sectors, including business travel, energy usage, and waste management. By comparing the carbon footprints from these sectors, the function identifies the sector(s) with the highest carbon footprint for the specified *** company_name ***. It then provides tailored recommendations to help the user reduce their carbon footprint in those areas. The recommendations are fetched from predefined text files associated with each sector. *** You can see results even one sector of the company was filled ***
 parameters:
-- in: query
-  name: company_name
-  description: >
-    Company Name
-  required: true
-  schema:
-    type: string
-    description: Company name
+  - in: query
+    name: company_name
+    description: >
+      Company Name
+    required: true
+    schema:
+      type: string
+      description: Company name
 responses:
-        '200':
-          description: Successful operation
-          schema:
-            type: object
-            properties:
-                  highest_carbon_footprint_sector:
-                    type: string
-                    example: "business_travel"
-                  carbon_footprint:
-                    type: string
-                    example: "business_travel"
-                  EU_law:
-                    type: string
-                    example: "https://climate.ec.europa.eu/eu-action/international-action-climate-change/emissions-monitoring-reporting_en"
-                  recommendation:
-                    type: string
-                    example: "Recommendations for Business Travel: Business Travel EU Strategies: Encourage Remote Work and Virtual Meetings: Leverage technology to minimize the need for travel, in line with the EU's digital single market strategy. Promote Sustainable Transport: Utilize the EU's initiatives for sustainable transport, including trains and electric vehicles, for necessary business travel. Participate in EU Emissions Trading System (ETS): For industries covered under the ETS, consider carbon offsetting within the system to compensate for travel-related emissions. Adopt EU’s Green Public Procurement (GPP) for Travel Services: When procuring travel services, prioritize providers with strong environmental performance."
-        '500':
-          description: Internal Server Error
-          schema:
-            type: object
-            properties:
-              error:
-                type: string
-                description: A message describing the internal server error that occurred.
+          '200':
+            description: Successful operation
+            schema:
+              type: object
+              properties:
+                    highest_carbon_footprint_sector:
+                      type: string
+                      example: "business_travel"
+                    carbon_footprint:
+                      type: string
+                      example: "business_travel"
+                    EU_law:
+                      type: string
+                      example: "https://climate.ec.europa.eu/eu-action/international-action-climate-change/emissions-monitoring-reporting_en"
+                    recommendation:
+                      type: string
+                      example: "Recommendations for Business Travel: Business Travel EU Strategies: Encourage Remote Work and Virtual Meetings: Leverage technology to minimize the need for travel, in line with the EU's digital single market strategy. Promote Sustainable Transport: Utilize the EU's initiatives for sustainable transport, including trains and electric vehicles, for necessary business travel. Participate in EU Emissions Trading System (ETS): For industries covered under the ETS, consider carbon offsetting within the system to compensate for travel-related emissions. Adopt EU’s Green Public Procurement (GPP) for Travel Services: When procuring travel services, prioritize providers with strong environmental performance."
+          '500':
+            description: Internal Server Error
+            schema:
+              type: object
+              properties:
+                error:
+                  type: string
+                  description: A message describing the internal server error that occurred.
